# Floating-base-trajectory-optimization

./: .gitignore  CMakeLists.txt  README.md  orca_ydescription.urdf  package.xml
src/: main.cpp
traj_opt/: CMakeLists.txt  package.xml
traj_opt/src/: demo.cpp  main.cpp  simple_example.cpp
